--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>数据与决策工程重点实验室</title>
-	<link rel="stylesheet" type="text/css" href="css/indexcss.css">
+	<link rel="stylesheet" type="text/css" href="https://github.com/Y-uanJun/Lab/blob/master/demo/css/indexCss.css">
 </head>
 <body>
 <!--头部-->
