--- a/Sgraduated.html
+++ b/Sgraduated.html
@@ -4,8 +4,8 @@
 	<meta charset='utf-8'>
 	<title>研究动态</title>
 	<link rel='stylesheet' href="css/common.css" />
-	<link rel='stylesheet' href="css/activity.css" />
-	<link rel="stylesheet" type="text/css" href="css/graduated.css">
+	<link rel='stylesheet' href="css/Sactivity.css" />
+	<link rel="stylesheet" type="text/css" href="css/Sgraduated.css">
 </head>
 <body>
 	<div class="header">
@@ -35,14 +35,14 @@
 	<!-- nav start -->
 	<div class="nav">
 		<ul>
-			<li><a href="#">首页</a></li>
-			<li><a href="#">关于我们</a></li>
-			<li><a href="#">成员介绍</a></li>
-			<li><a href="activity.html">教学活动</a></li>
-			<li><a href="#">研究动态</a></li>
-			<li><a href="#">研究生培养</a></li>
+			<li><a href="index.html">首页</a></li>
+			<li><a href="yAboutUs.html">关于我们</a></li>
+			<li><a href="jMembers.html">成员介绍</a></li>
+			<li><a href="jActivity.html">教学活动</a></li>
+			<li><a href="Sgraduated.html">研究动态</a></li>
+			<li><a href="Seducated.html">研究生培养</a></li>
 			<li><a href="#">产品与服务</a></li>
-			<li><a href="#">往届成员</a></li>
+			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
 	<!-- 主体 -->
@@ -153,7 +153,7 @@
 			</p>
 		</div>
 	</div>
-	<script src="js/requirejs.js" data-main="js/graduated" defer async="true"></script>
+	<script src="js/require.js" data-main="js/Sgraduated" defer async="true"></script>
 	<!-- <script src='js/jquery.js'></script>
 	<script src='js/common.js'></script>
 	<script src='js/activity.js'></script> -->
