--- a/jMembersDetil.html
+++ b/jMembersDetil.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>成员详情</title>
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/membersDetil.css">
+	<link rel="stylesheet" href="css/jmembersDetil.css">
 </head>
 <body>
 	<div class="header">
@@ -34,14 +34,14 @@
 	<!-- nav start -->
 	<div class="nav">
 		<ul>
-			<li><a href="#">首页</a></li>
-			<li><a href="#">关于我们</a></li>
-			<li><a class="nav-active" href="#">成员介绍</a></li>
-			<li><a href="Activity.html">教学活动</a></li>
-			<li><a href="#">研究动态</a></li>
-			<li><a href="#">研究生培养</a></li>
+			<li><a href="index.html">首页</a></li>
+			<li><a href="yAboutUs.html">关于我们</a></li>
+			<li><a href="jMembers.html" class="nav-active">成员介绍</a></li>
+			<li><a href="jActivity.html">教学活动</a></li>
+			<li><a href="Sgraduated.html">研究动态</a></li>
+			<li><a href="Seducated.html">研究生培养</a></li>
 			<li><a href="#">产品与服务</a></li>
-			<li><a href="#">往届成员</a></li>
+			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
 	<!-- 页面主体部分 -->
@@ -152,6 +152,6 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/app2" src="js/requirejs.js"></script>
+	<script data-main="js/japp2" src="js/require.js"></script>
 </body>
 </html>
