--- a/jActivity.html
+++ b/jActivity.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>教学活动</title>
 	<link rel="stylesheet" href="css/common.css">
-	<link rel="stylesheet" href="css/activity.css">
+	<link rel="stylesheet" href="css/jactivity.css">
 </head>
 <body>
 	<div class="header">
@@ -34,14 +34,14 @@
 	<!-- nav start -->
 	<div class="nav">
 		<ul>
-			<li><a href="#">首页</a></li>
-			<li><a href="#">关于我们</a></li>
-			<li><a href="Members.html">成员介绍</a></li>
-			<li><a  class="nav-active" href="#">教学活动</a></li>
-			<li><a href="#">研究动态</a></li>
-			<li><a href="#">研究生培养</a></li>
+			<li><a href="index.html">首页</a></li>
+			<li><a href="yAboutUs.html">关于我们</a></li>
+			<li><a href="jMembers.html">成员介绍</a></li>
+			<li><a href="jActivity.html" class="nav-active">教学活动</a></li>
+			<li><a href="Sgraduated.html">研究动态</a></li>
+			<li><a href="Seducated.html">研究生培养</a></li>
 			<li><a href="#">产品与服务</a></li>
-			<li><a href="#">往届成员</a></li>
+			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
 	<!-- 页面主体部分 -->
@@ -145,6 +145,6 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/app3" src="js/requirejs.js"></script>
+	<script data-main="js/japp3" src="js/require.js"></script>
 </body>
 </html>
