--- a/yAboutUs.html
+++ b/yAboutUs.html
@@ -36,10 +36,10 @@
 		<ul>
 			<li><a href="index.html">首页</a></li>
 			<li><a href="yAboutUs.html">关于我们</a></li>
-			<li><a href="#">成员介绍</a></li>
-			<li><a href="#">教学活动</a></li>
-			<li><a href="#">研究动态</a></li>
-			<li><a href="#">研究生培养</a></li>
+			<li><a href="jMembers.html">成员介绍</a></li>
+			<li><a href="jActivity.html">教学活动</a></li>
+			<li><a href="Sgraduated.html">研究动态</a></li>
+			<li><a href="Seducated.html">研究生培养</a></li>
 			<li><a href="#">产品与服务</a></li>
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
