--- a/Sgraduated.html
+++ b/Sgraduated.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>数据与决策工程重点实验室</title>
-	<link rel="stylesheet" type="text/css" href="css/yAboutusCss.css">
+	<meta charset='utf-8'>
+	<title>研究动态</title>
+	<link rel='stylesheet' href="css/common.css" />
+	<link rel='stylesheet' href="css/Sactivity.css" />
+	<link rel="stylesheet" type="text/css" href="css/Sgraduated.css">
 </head>
 <body>
-<!--头部-->
 	<div class="header">
 		<div class="header-wrap">
 			<div class="head-left">
@@ -44,29 +45,43 @@
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
-	<!-- 内容 -->
-	<div class="main">	
-		 <div class="yTitle" id="yTitle">
-		      关于我们
-		 </div>
-		  <div class="yText">
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+	<!-- 主体 -->
+    <div class='mainWrap'>
+    	<div class='main'>
 
-			 <div class="yResearch">
-			  研究方向
-			 </div>
+    	    <div class='lesson'>
+    	    	<h2 class='lessonTit'>研究动态</h2>
+    	    </div>
+    	    <div id="Scontent">
+    	    <!-- 每一个详情列 -->
+    	    	<!-- <div class="conList">
+    	    		<div class="conTitle">
+    	    			<h4>乔布斯教授前往杭州交流</h4>
+    	    			<span>2016.5.20</span>
+    	    		</div>
+    	    		<div class="conCon">
+    	    			当我们长大了，上面说的游戏变得很幼稚。你不能把一个松塔当成一个手榴弹；假装拥有神奇的魔法；当其他孩子觉得作为一个成年人很酷。你最终会迫于压力而长大。不过总的来说这也是一个非常幸运的童年。
+    	    		</div>
+    	    		<span class="conMore">
+    	    			阅读原文
+    	    		</span>
+    	    	</div> -->
+	    	 	
+	    	 	</div>
+	    	 	<div class="page">
+		    	 	<ul id="pageList">
+		    	 		<li id="prePage">上一页</li>
+		    	 		<li id="indexPage"></li>
+		    	 		<li id="nextPage">下一页</li>
+		    	 		<li id="pageTotal"></li>
+		    	 	</ul>
+	    	 	</div>
 
-			  <p>CCCDFGHRGHFVwoe我么都有一个啊的所得税法可接受的说三道四近段时间</p>
-		  </div>
-	</div>
 
-	<!-- 尾部 -->
-	 <div class="footer">
+    	    
+    	</div>
+    </div>
+    <div class="footer">
 		<div class="footer-links">
 			<div class="friend-link">
 				<h2>友情链接</h2>
@@ -121,8 +136,6 @@
 				</ul>
 			</div>
 		</div>
-
-		<!--尾部-->
 		<div class="footer-bottom">
 			<ul>
 				<li>版权所有</li>
@@ -140,6 +153,9 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/ymainAboutus" src="js/require.js" ></script>
+	<script src="js/require.js" data-main="js/Sgraduated" defer async="true"></script>
+	<!-- <script src='js/jquery.js'></script>
+	<script src='js/common.js'></script>
+	<script src='js/activity.js'></script> -->
 </body>
 </html>
