--- a/jActivity.html
+++ b/jActivity.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>数据与决策工程重点实验室</title>
-	<link rel="stylesheet" type="text/css" href="css/yAboutusCss.css">
+	<title>教学活动</title>
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/jactivity.css">
 </head>
 <body>
-<!--头部-->
 	<div class="header">
 		<div class="header-wrap">
 			<div class="head-left">
@@ -37,36 +37,43 @@
 			<li><a href="index.html">首页</a></li>
 			<li><a href="yAboutUs.html">关于我们</a></li>
 			<li><a href="jMembers.html">成员介绍</a></li>
-			<li><a href="jActivity.html">教学活动</a></li>
+			<li><a href="jActivity.html" class="nav-active">教学活动</a></li>
 			<li><a href="Sgraduated.html">研究动态</a></li>
 			<li><a href="Seducated.html">研究生培养</a></li>
 			<li><a href="#">产品与服务</a></li>
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
-	<!-- 内容 -->
-	<div class="main">	
-		 <div class="yTitle" id="yTitle">
-		      关于我们
-		 </div>
-		  <div class="yText">
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-
-			 <div class="yResearch">
-			  研究方向
-			 </div>
-
-			  <p>CCCDFGHRGHFVwoe我么都有一个啊的所得税法可接受的说三道四近段时间</p>
-		  </div>
+	<!-- 页面主体部分 -->
+	<div class="main">
+		<div class="main-container">
+			<div class="container-title">教学活动</div>
+			<div class="container-content">
+				<!-- <div class="content-list">
+					<img src="img/新闻图片.png" alt="活动">	
+					<div><span>2016.5.20</span>发布人：<strong>李昌兵</strong></div>
+					<h3>李昌兵下学期不上信息系统设计</h3>
+					<p>你们下学期别选我的课，别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别选我的课别</p>
+					<a href=""><span class="readmore">课程详情</span></a>
+				</div> -->
+			</div>
+			<!--  页面下标 -->
+			<div class="container-pager">
+				<div class="pageBtn">
+					<span class="prev">上一页</span>
+					<ul id="pageNav">
+						<!-- <li><a href="#">1</a></li>
+						<li><a href="#">2</a></li>
+						<li><a href="#">3</a></li> -->
+					</ul>
+					<span class="next">下一页</span>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<!-- 尾部 -->
-	 <div class="footer">
+	<!-- 页面尾部 -->
+	<div class="footer">
 		<div class="footer-links">
 			<div class="friend-link">
 				<h2>友情链接</h2>
@@ -121,8 +128,6 @@
 				</ul>
 			</div>
 		</div>
-
-		<!--尾部-->
 		<div class="footer-bottom">
 			<ul>
 				<li>版权所有</li>
@@ -140,6 +145,6 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/ymainAboutus" src="js/require.js" ></script>
+	<script data-main="js/japp3" src="js/require.js"></script>
 </body>
 </html>
