--- a/jMembers.html
+++ b/jMembers.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>数据与决策工程重点实验室</title>
-	<link rel="stylesheet" type="text/css" href="css/yAboutusCss.css">
+	<title>成员介绍</title>
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/jmembers.css">
 </head>
 <body>
-<!--头部-->
 	<div class="header">
 		<div class="header-wrap">
 			<div class="head-left">
@@ -36,7 +36,7 @@
 		<ul>
 			<li><a href="index.html">首页</a></li>
 			<li><a href="yAboutUs.html">关于我们</a></li>
-			<li><a href="jMembers.html">成员介绍</a></li>
+			<li><a href="jMembers.html" class="nav-active">成员介绍</a></li>
 			<li><a href="jActivity.html">教学活动</a></li>
 			<li><a href="Sgraduated.html">研究动态</a></li>
 			<li><a href="Seducated.html">研究生培养</a></li>
@@ -44,29 +44,28 @@
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
-	<!-- 内容 -->
-	<div class="main">	
-		 <div class="yTitle" id="yTitle">
-		      关于我们
-		 </div>
-		  <div class="yText">
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-
-			 <div class="yResearch">
-			  研究方向
-			 </div>
-
-			  <p>CCCDFGHRGHFVwoe我么都有一个啊的所得税法可接受的说三道四近段时间</p>
-		  </div>
+	<!-- 页面主体部分 -->
+	<div class="main">
+		<div class="main-container">
+			<div class="container-title">成员介绍</div>
+			<div class="container-content">
+				<!-- <div class="content-msg">
+					<img class="content-msg-img" src="img/成员一.png" alt="成员一">
+					<div class="content-msg-text">
+						<img src="img/矩形 7.png">
+						<h2>李昌兵</h2>
+						<p>担任职位：<strong>大魔王</strong></p>
+						<p class="text-postion">重庆邮电大学经济管理学院管理科学与工程系教授，担任XXX职位，负责XXX平台研发，等等等等等。。。等等等等,等等等等</p>
+						<p class="text-addres">邮箱：XXXXXXXXX@163.com</p>
+						<a href="#"><span class="text-readmore" id="readmore">more</span></a>
+					</div>
+				</div> -->
+			</div>
+		</div>
 	</div>
 
-	<!-- 尾部 -->
-	 <div class="footer">
+	<!-- 页面尾部 -->
+	<div class="footer">
 		<div class="footer-links">
 			<div class="friend-link">
 				<h2>友情链接</h2>
@@ -121,8 +120,6 @@
 				</ul>
 			</div>
 		</div>
-
-		<!--尾部-->
 		<div class="footer-bottom">
 			<ul>
 				<li>版权所有</li>
@@ -140,6 +137,6 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/ymainAboutus" src="js/require.js" ></script>
+	<script data-main="js/japp" src="js/require.js"></script>
 </body>
 </html>
