--- a/jMembersDetil.html
+++ b/jMembersDetil.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>数据与决策工程重点实验室</title>
-	<link rel="stylesheet" type="text/css" href="css/yAboutusCss.css">
+	<title>成员详情</title>
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/jmembersDetil.css">
 </head>
 <body>
-<!--头部-->
 	<div class="header">
 		<div class="header-wrap">
 			<div class="head-left">
@@ -36,7 +36,7 @@
 		<ul>
 			<li><a href="index.html">首页</a></li>
 			<li><a href="yAboutUs.html">关于我们</a></li>
-			<li><a href="jMembers.html">成员介绍</a></li>
+			<li><a href="jMembers.html" class="nav-active">成员介绍</a></li>
 			<li><a href="jActivity.html">教学活动</a></li>
 			<li><a href="Sgraduated.html">研究动态</a></li>
 			<li><a href="Seducated.html">研究生培养</a></li>
@@ -44,29 +44,43 @@
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
-	<!-- 内容 -->
-	<div class="main">	
-		 <div class="yTitle" id="yTitle">
-		      关于我们
-		 </div>
-		  <div class="yText">
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-			 <img alt="图片" src="">
-			 <p>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
-
-			 <div class="yResearch">
-			  研究方向
-			 </div>
-
-			  <p>CCCDFGHRGHFVwoe我么都有一个啊的所得税法可接受的说三道四近段时间</p>
-		  </div>
+	<!-- 页面主体部分 -->
+	<div class="main">
+		<div class="main-container">
+			<div class="container-title">成员介绍</div>
+			<div class="container-content">
+				<!-- <div class="synopsis">
+					<img src="img/成员一.png" alt="成员一">
+					<h2>李昌兵</h2>
+					<p>担任职位：<strong>副教授</strong></p>
+					<p>邮箱：XXXXXXXXXX</p>
+				</div>
+					<div class="introduction">
+						<h2>个人介绍</h2>
+						<p>李昌兵，男，工学博士，副教授，硕士生导师，现任重庆邮电大学经济管理学院管理工程副系主任。主要研究方向为管理决策支持技术及商务智能、管理信息系统与电子商务、供应链与物流系统分析及优化。
+						</p>
+					</div>
+					<div class="introduction">
+						<h2>个人介绍</h2>
+						<p>李昌兵，男，工学博士，副教授，硕士生导师，现任重庆邮电大学经济管理学院管理工程副系主任。主要研究方向为管理决策支持技术及商务智能、管理信息系统与电子商务、供应链与物流系统分析及优化。
+						</p>
+					</div>
+					<div class="introduction">
+						<h2>个人介绍</h2>
+						<p>李昌兵，男，工学博士，副教授，硕士生导师，现任重庆邮电大学经济管理学院管理工程副系主任。主要研究方向为管理决策支持技术及商务智能、管理信息系统与电子商务、供应链与物流系统分析及优化。
+						</p>
+					</div>
+					<div class="introduction">
+						<h2>个人介绍</h2>
+						<p>李昌兵，男，工学博士，副教授，硕士生导师，现任重庆邮电大学经济管理学院管理工程副系主任。主要研究方向为管理决策支持技术及商务智能、管理信息系统与电子商务、供应链与物流系统分析及优化。
+						</p>
+					</div>	 -->
+			</div>
+		</div>
 	</div>
 
-	<!-- 尾部 -->
-	 <div class="footer">
+	<!-- 页面尾部 -->
+	<div class="footer">
 		<div class="footer-links">
 			<div class="friend-link">
 				<h2>友情链接</h2>
@@ -121,8 +135,6 @@
 				</ul>
 			</div>
 		</div>
-
-		<!--尾部-->
 		<div class="footer-bottom">
 			<ul>
 				<li>版权所有</li>
@@ -140,6 +152,6 @@
 			</p>
 		</div>
 	</div>
-	<script data-main="js/ymainAboutus" src="js/require.js" ></script>
+	<script data-main="js/japp2" src="js/require.js"></script>
 </body>
 </html>
