--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<li><a href="jActivity.html">教学活动</a></li>
 			<li><a href="Sgraduated.html">研究动态</a></li>
 			<li><a href="Seducated.html">研究生培养</a></li>
-			<li><a href="#">产品与服务</a></li>
+			<li><a href="Sproduct">产品与服务</a></li>
 			<li><a href="yOldMember.html">往届成员</a></li>
 		</ul>
 	</div>
