研究生培养 by sfq

--- a/Seducated.html
+++ b/Seducated.html
@@ -195,7 +195,7 @@
 			</p>
 		</div>
 	</div>
-	<script src="js/require.js" data-main="js/Seducated" defer async="true"></script>
+	<script src="js/require.js" data-main="js/Seducated"></script>
 
 	<!-- <script src='js/jquery.js'></script>
 	<script src='js/common.js'></script>
